# ambiwin

./: .gitignore  LICENSE  README.md  YandexAmbiSync.spec  config.example.json  pyproject.toml  requirements.txt
ambisync/: __init__.py  color_processor.py  lamp_backends.py  screen_capture.py  sync_engine.py
ambisync/ui/: __init__.py  main_window.py
yandex-ambisync/ambisync/: __main__.py  app.py  config.py  controller.py  gui.py  tray.py  yandex_api.py
yandex-ambisync/ambisync/ui/: widgets.py
