[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-ambisync"
version = "1.0.0"
description = "Screen color sync for Yandex Ambilight smart lamp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.scripts]
yandex-ambisync = "ambisync.app:main"

[tool.setuptools.packages.find]
include = ["ambisync*"]

[tool.setuptools.package-data]
ambisync = ["../assets/*"]
